changing some color and backgound size and modifying

--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgba(155, 89, 182, 0.7);
+  background-color: rgba(128, 128, 128, 0.315);
   font-family: 'Open Sans', sans-serif;
   display: flex;
   align-items: center;
@@ -17,7 +17,7 @@ body {
 .phone {
   position: relative;
   overflow: hidden;
-  border: 3px solid #eee;
+  border: 3px inset black;
   border-radius: 15px;
   height: 600px;
   width: 340px;
@@ -47,7 +47,8 @@ nav {
 }
 
 nav ul {
-  background-color: #fff;
+  background-color: rgb(187, 186, 236);
+  border-top: 3px solid black;
   display: flex;
   list-style-type: none;
   padding: 0;
@@ -56,7 +57,7 @@ nav ul {
 }
 
 nav li {
-  color: #777;
+  color: red;
   cursor: pointer;
   flex: 1;
   padding: 10px;
@@ -68,7 +69,9 @@ nav ul li p {
   margin: 2px 0;
 }
 
-nav ul li:hover,
+nav ul li:hover{
+  color: darkgoldenrod;
+}
 nav ul li.active {
-  color: #8e44ad;
+  color: blue;
 }
